--- a/index.html
+++ b/index.html
@@ -98,6 +98,62 @@
               </ul>
             </div>
           </div>
+
+          <div class="major-projects">
+            <div class="wrapper">
+              <h2 class="h2">Previous Works</h2>
+              <div class="projects-list">
+                <h3 class="h3 project-title">Book List Application</h3>
+
+                <div class="project-items">
+                  <a
+                    href="https://github.com/gmcodes20/book-list-app"
+                    class="project-item_list"
+                    >Github
+                  </a>
+                  <a
+                    href="https://gmcodes20.github.io/book-list-app/"
+                    class="project-item_list"
+                    >Visit
+                  </a>
+                </div>
+              </div>
+
+              <div class="projects-list">
+                <h3 class="h3 project-title">Bridgelt</h3>
+
+                <div class="project-items">
+                  <a
+                    href="https://github.com/gmcodes20/Bridgelt"
+                    class="project-item_list"
+                    >Github
+                  </a>
+                  <a
+                    href="https://gmcodes20.github.io/Bridgelt/"
+                    class="project-item_list"
+                    >Visit
+                  </a>
+                </div>
+              </div>
+
+              <div class="projects-list">
+                <h3 class="h3 project-title">Yoo!</h3>
+
+                <div class="project-items">
+                  <a
+                    href="https://github.com/gmcodes20/yoo"
+                    class="project-item_list"
+                    >Github
+                  </a>
+                  <a
+                    href="https://gmcodes20.github.io/yoo/dist/"
+                    class="project-item_list"
+                    >Visit
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </aside>
 
         <div class="content">
@@ -164,32 +220,31 @@
                   <div class="skill-icon"><i class="fab fa-bootstrap"></i></div>
                   <h3>BS</h3>
                 </div>
-                <div class="skills-card">
-                  <div class="skill-icon"><i class="fab fa-react"></i></div>
-                  <h3>React</h3>
+              </div>
+            </div>
+          </div>
+          <div class="flex fled-d">
+            <div class="education">
+              <div class="wrapper">
+                <h2 class="h2 skills-h2">Education</h2>
+
+                <div class="education-texts">
+                  <h3>
+                    Higher National Diploma (HND),
+                    <span class="course">Computer Science, 2018</span>
+                  </h3>
+                  <h4>Auchi Polytechnic, Auchi</h4>
                 </div>
               </div>
             </div>
-          </div>
 
-          <div class="education">
-            <div class="wrapper">
-              <h2 class="h2 skills-h2">Education</h2>
-
-              <div class="education-texts">
-                <h3>
-                  Higher National Diploma (HND),
-                  <span class="course">Computer Science, 2018</span>
-                </h3>
-                <h4>Auchi Polytechnic, Auchi</h4>
+            <div class="references">
+              <div class="wrapper">
+                <h2 class="h2 skills-h2">References</h2>
+                <div class="references-texts">
+                  <h3>Available on request</h3>
+                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="references">
-            <div class="wrapper">
-              <h2 class="h2 skills-h2">References</h2>
-              <h3>Available on request</h3>
             </div>
           </div>
         </div>
