--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
               </div>
 
               <div class="projects-list">
-                <h3 class="h3 project-title">Yoo!</h3>
+                <h3 class="h3 project-title">GTravel</h3>
 
                 <div class="project-items">
                   <a
-                    href="https://github.com/gmcodes20/yoo"
+                    href="https://github.com/gmcodes20/gtravel"
                     class="project-item_list"
                     >Github
                   </a>
                   <a
-                    href="https://gmcodes20.github.io/yoo/dist/"
+                    href="https://gmcodes20.github.io/gtravel/"
                     class="project-item_list"
                     >Visit
                   </a>
